api endpoints for dependencies
